# metamorphosis

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  base_name.hpp  base_number.cpp  base_number.hpp  file_target.cpp  file_target.hpp  image_target.cpp  image_target.hpp  main.cpp  program.cpp  program.hpp  sort_policie.hpp
src/main/: CMakeLists.txt  argparse_extension.hpp  main.cpp
src/metamorphosis/: CMakeLists.txt  base_name.hpp  base_number.cpp  base_number.hpp  exception.hpp  forward_declarations.hpp  image_utils.cpp  image_utils.hpp  program.cpp  program.hpp  program_args.hpp  sort_policies.hpp  sort_strategies.cpp  sort_strategies.hpp  target_file.cpp  target_file.hpp  target_image.cpp  target_image.hpp
